--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -12,6 +12,7 @@
         table{
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         td, th{
@@ -29,6 +30,16 @@
         thead, tfoot{
             background-color: gray;
             color: white;
+        }
+
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: gray;
+        }
+
+        tbody > tr:nth-child(2n){
+            background-color: lightgray;
         }
 
         td.num{
@@ -151,5 +162,9 @@
                 </tr>
         </tfoot>
     </table>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis cum ipsum itaque velit soluta consequatur molestiae ducimus! Rem voluptate vero voluptas iusto impedit, dignissimos neque dolore quos hic veniam est. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, quisquam expedita, ipsum provident illum ullam sequi illo molestiae reiciendis mollitia atque praesentium quas obcaecati ut veritatis dignissimos tenetur sed rem? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde dignissimos deserunt explicabo vitae error, eius dolorem voluptas saepe animi quas laudantium doloremque. Nulla illum blanditiis, nisi sapiente sed modi vero! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum quidem odit neque voluptatum maiores voluptate aspernatur. Nesciunt dicta aspernatur ratione, fugiat rem quis tempore nobis neque voluptas officiis, aliquid eum!</p>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.Omnis cum ipsum itaque velit soluta consequatur molestiaeducimus! Rem voluptate vero voluptas iusto impedit,dignissimos neque dolore quos hic veniam est. Lorem ipsumdolor sit amet consectetur adipisicing elit. Molestias,quisquam expedita, ipsum provident illum ullam sequi illomolestiae reiciendis mollitia atque praesentium quasobcaecati ut veritatis dignissimos tenetur sed rem? Lorem,ipsum dolor sit amet consectetur adipisicing elit. Undedignissimos deserunt explicabo vitae error, eius doloremvoluptas saepe animi quas laudantium doloremque. Nulla illumblanditiis, nisi sapiente sed modi vero! Lorem ipsum dolorsit amet, consectetur adipisicing elit. Ipsum quidem oditneque voluptatum maiores voluptate aspernatur. Nesciuntdicta aspernatur ratione, fugiat rem quis tempore nobisneque voluptas officiis, aliquid eum!</p>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis cum ipsum itaque velit soluta consequatur molestiae ducimus! Rem voluptate vero voluptas iusto impedit, dignissimos neque dolore quos hic veniam est. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, quisquam expedita, ipsum provident illum ullam sequi illo molestiae reiciendis mollitia atque praesentium quas obcaecati ut veritatis dignissimos tenetur sed rem? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde dignissimos deserunt explicabo vitae error, eius dolorem voluptas saepe animi quas laudantium doloremque. Nulla illum blanditiis, nisi sapiente sed modi vero! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum quidem odit neque voluptatum maiores voluptate aspernatur. Nesciunt dicta aspernatur ratione, fugiat rem quis tempore nobis neque voluptas officiis, aliquid eum!</p>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.Omnis cum ipsum itaque velit soluta consequatur molestiaeducimus! Rem voluptate vero voluptas iusto impedit,dignissimos neque dolore quos hic veniam est. Lorem ipsumdolor sit amet consectetur adipisicing elit. Molestias,quisquam expedita, ipsum provident illum ullam sequi illomolestiae reiciendis mollitia atque praesentium quasobcaecati ut veritatis dignissimos tenetur sed rem? Lorem,ipsum dolor sit amet consectetur adipisicing elit. Undedignissimos deserunt explicabo vitae error, eius doloremvoluptas saepe animi quas laudantium doloremque. Nulla illumblanditiis, nisi sapiente sed modi vero! Lorem ipsum dolorsit amet, consectetur adipisicing elit. Ipsum quidem oditneque voluptatum maiores voluptate aspernatur. Nesciuntdicta aspernatur ratione, fugiat rem quis tempore nobisneque voluptas officiis, aliquid eum!</p>
 </body>
 </html>
