--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>iframe</title>
 </head>
 <body>
-    
+    <h1>Teste com iframe</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum possimus, quibusdam officia ex quasi id error quod porro beatae est fugiat saepe consequatur, dolores optio vitae, pariatur laborum corrupti veniam!Loremlore Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam laboriosam dolor nobis necessitatibus tempore veniam quibusdam, iusto fugit, odio repudiandae omnis cupiditate alias! Voluptate aspernatur, pariatur magnam ullam fuga deleniti?</p>
+
+<iframe src="paginasExtras/pag001.html" frameborder="0" height="500" width="500">
+    <p>Infelizmente seu navegador não é compatível com iframe.</p>
+</iframe>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, ipsum minus optio eveniet nesciunt mollitia laboriosam ut officiis eum reprehenderit ad beatae dolore numquam dolorum aliquid ducimus illum placeat minima?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque dolor voluptate officia, dolore ad ut nemo, animi nihil amet eum possimus rerum eaque earum blanditiis adipisci nesciunt accusamus, repudiandae beatae?</p>
 </body>
 </html>
