--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -4,21 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Uso de iframe</title>
+    <style>
+        body{
+            font-family: Arial, Helvetica, sans-serif;
+
+        }
+
+        iframe#tela{
+            width: 95vw;
+            border: 2px solid black;
+
+        }
+    </style>
 </head>
 <body>
-    <h1>Faça um escolha</h1>
+    <h1>Faça uma escolha</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quod dolor error aut libero laboriosam autem tempore quo minima deserunt, impedit aliquam commodi optio tempora, similique, reiciendis ea nesciunt voluptatem.</p>
 
     <ul>
-        <li><a href="pag001.html" target="frame">Primeira página</a></li>
-        <li>Segunda página</li>
-        <li>Terceira página</li>
+        <li><a href="paginasExtras/pag001.html" target="frame">Primeira página</a></li>
+        <li><a href="paginasExtras/pag002.html" target="frame">Segunda página</a></li>
+        <li><a href="paginasExtras/pag003.html" target="frame">Terceira página</a></li>
     </ul>
 
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta quidem neque libero nostrum inventore incidunt, alias voluptates nemo est nisi enim quis velit dolorem cum, dignissimos quos a earum impedit. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa, exercitationem quas tenetur voluptatum ullam dolore labore consequatur ipsum nesciunt totam alias voluptates ipsam autem! Voluptates enim labore suscipit fuga? Praesentium.</p>
 
-    <iframe id="tela" name="frame" src="" frameborder="0">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et at suscipit pariatur, voluptatem voluptates quam veniam molestiae nisi eos quibusdam, odio, sit nihil eius accusantium eligendi harum aliquam ipsa inventore.</p><img src='imagens/img01.jpeg'>frameborder="0">
         <p>Infelizmente seu navegador não é compatível com isso.</p>
     </iframe>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia quas doloremque blanditiis nesciunt saepe aliquid, libero maxime nemo ipsam quod accusantium hic, similique consectetur. Autem libero repellendus quas saepe voluptas. Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero odit beatae, saepe iure fugiat rem commodi omnis at ad quasi quidem ratione accusantium similique cumque eos, sed delectus autem ipsum?</p>
 </body>
 </html>
