--- a/exercicios/ex024/paginasExtras/pag001.html
+++ b/exercicios/ex024/paginasExtras/pag001.html
@@ -7,13 +7,160 @@
     <style>
         body{
             font-family: Arial, Helvetica, sans-serif;
-            background-color: lightgreen;
+            background-color: lightgray;
             color: white;
+        }
+
+        table {
+            border-collapse: collapse;
+        }
+
+        caption {
+            font-size: 1.2em;
+            font-weight: bold;
+            padding: 20px;
+        }
+
+        td, th {
+            border: 1px solid black;
+            padding: 10px;
+        }
+
+        tr:nth-child(even) {
+            background-color: rgba(228, 228, 228, 0.986);
         }
     </style>
 </head>
 <body>
     <h1>Isso é um teste!</h1>
+
+    <table>
+        <caption>Tabelas responsivas</caption>
+        <thead>
+            <tr>
+                <th>Produto</th>
+                <th>Jan</th>
+                <th>Fev</th>
+                <th>Mar</th>
+                <th>Abr</th>
+                <th>Mai</th>
+                <th>Jun</th>
+                <th>Jul</th>
+                <th>Ago</th>
+                <th>Set</th>
+                <th>Out</th>
+                <th>Nov</th>
+                <th>Dez</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>TV 40"</td>
+                <td>01</td>
+                <td>04</td>
+                <td>07</td>
+                <td>12</td>
+                <td>12</td>
+                <td>10</td>
+                <td>05</td>
+                <td>02</td>
+                <td>01</td>
+                <td>01</td>
+                <td>04</td>
+                <td>16</td>
+            </tr>
+            <tr>
+                <td>Home theater</td>
+                <td>01</td>
+                <td>04</td>
+                <td>07</td>
+                <td>12</td>
+                <td>12</td>
+                <td>10</td>
+                <td>05</td>
+                <td>02</td>
+                <td>01</td>
+                <td>01</td>
+                <td>04</td>
+                <td>16</td>
+            </tr>
+            <tr>
+                <td>Samsung Galaxy S20</td>
+                <td>01</td>
+                <td>04</td>
+                <td>07</td>
+                <td>12</td>
+                <td>12</td>
+                <td>10</td>
+                <td>05</td>
+                <td>02</td>
+                <td>01</td>
+                <td>01</td>
+                <td>04</td>
+                <td>16</td>
+            </tr>
+            <tr>
+                <td>Ipad Mini</td>
+                <td>01</td>
+                <td>04</td>
+                <td>07</td>
+                <td>12</td>
+                <td>12</td>
+                <td>10</td>
+                <td>05</td>
+                <td>02</td>
+                <td>01</td>
+                <td>01</td>
+                <td>04</td>
+                <td>16</td>
+            </tr>
+            <tr>
+                <td>PlayStation 4</td>
+                <td>01</td>
+                <td>04</td>
+                <td>07</td>
+                <td>12</td>
+                <td>12</td>
+                <td>10</td>
+                <td>05</td>
+                <td>02</td>
+                <td>01</td>
+                <td>01</td>
+                <td>04</td>
+                <td>16</td>
+            </tr>
+            <tr>
+                <td>Lava louças</td>
+                <td>01</td>
+                <td>04</td>
+                <td>07</td>
+                <td>12</td>
+                <td>12</td>
+                <td>10</td>
+                <td>05</td>
+                <td>02</td>
+                <td>01</td>
+                <td>01</td>
+                <td>04</td>
+                <td>16</td>
+            </tr>
+            <tr>
+                <td>Amazon Echo</td>
+                <td>01</td>
+                <td>04</td>
+                <td>07</td>
+                <td>12</td>
+                <td>12</td>
+                <td>10</td>
+                <td>05</td>
+                <td>02</td>
+                <td>01</td>
+                <td>01</td>
+                <td>04</td>
+                <td>16</td>
+            </tr>
+        </tbody>
+    </table>
     
 </body>
 </html>
