exercicio 26 005 media query

--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <header>
         <h1>Meu site</h1>
-        <menu>
+        <i id="burguer" class="material-icons" onclick="clickMenu()">menu</i>
+        <menu id="itens">
             <ul>
                 <li><a href="#">Opção 1</a></li>
                 <li><a href="#">Opção 2</a></li>
@@ -27,5 +29,14 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse deleniti deserunt laudantium doloremque nobis ipsum non explicabo ex, dicta omnis consectetur dolorum maxime odio sint dolorem praesentium, rerum unde est. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam inventore unde odio natus doloremque vel eos animi? Quod inventore mollitia perferendis nesciunt accusamus hic incidunt, voluptates nisi vel sed facilis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere voluptatem odio illo adipisci quaerat enim placeat aspernatur, cum necessitatibus fugit sit minus amet consequuntur voluptatibus autem, similique dolore neque ab?</p>
         </article>
     </main>
+    <script>
+        function clickMenu() {
+            if (itens.style.display == 'block') {
+                itens.style.display = 'none'
+            } else {
+                itens.style.display = 'block'
+            }
+        }
+    </script>
 </body>
 </html>
